Archive2/03/5681955927cc1c/output
main.cpp:11:58: error: template argument 1 is invalid
     N, typename std::enable_if<(N > std::UINT32_MAX), int>::type
                                                          ^
main.cpp:12:1: error: expected '(' before '>' token
 > {
 ^
main.cpp:12:1: error: template argument 2 is invalid
main.cpp:12:3: error: expected '::' before '{' token
 > {
   ^
main.cpp:12:3: error: expected identifier before '{' token
main.cpp:12:3: error: qualified name does not name a class before '{' token
